...

  return (
    <View style={{ flex: 1, paddingTop: 120, paddingHorizontal: 24 }}>
      <View ref={containerRef}>
        <Text>container</Text>
        <View
          testID="inside-target"
          style={{ minHeight: 48, minWidth: 200, backgroundColor: '#ccf' }}
          onStartShouldSetResponder={() => true}
          onResponderRelease={(event) => checkTouch('INSIDE', insideRef.current, event.target, true)}
        >
          <View ref={insideRef}>
            <Text>inside touch target</Text>
          </View>
        </View>
      </View>
      <View
        testID="outside-target"
        style={{ minHeight: 48, minWidth: 200, backgroundColor: '#fcc' }}
        onStartShouldSetResponder={() => true}
        onResponderRelease={(event) => checkTouch('OUTSIDE', outsideRef.current, event.target, false)}
      >
        <View ref={outsideRef}>
          <Text>outside touch target</Text>
...
