appId: com.reactnativecontains.smoke
---
- launchApp:
    clearState: true
- tapOn:
    id: "inside-target"
- assertVisible: "CONTAINS_TOUCH_INSIDE_PASS"
- tapOn:
    id: "outside-target"
- assertVisible: "CONTAINS_TOUCH_OUTSIDE_PASS"
